full abstract processing support

--- a/lib/config/fields/evidence_all.yaml
+++ b/lib/config/fields/evidence_all.yaml
@@ -13,6 +13,7 @@
 - variant_inheritance
 - variant_type
 - study_type
+- source_type
 # - engineered_cells
 # - patient_cells_tissues
 # - animal_model
